--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<!--<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />-->
 		<meta name="viewport" content="width=device-width, initial-scale=0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -11,7 +11,7 @@
 	<body>
 		<div class="carry">
 		<div class="nav">
-		
+			<p style="color: #EDBC11; margin-left: 50px;padding-top: 50px;font-weight: bold;font-size: 40px;">Sharegear</p>
 			<div class="nav_title">
 				<p class="p1">拍片口袋</p>
 				<p class="p2">最好的在线影视器材租赁平台</p>
@@ -75,6 +75,7 @@
 		<div class="maps">
 			<div class="map">
 				<img src="img/12.jpg"/>
+				<img src="img/15.jpg" style="width:330px;margin-top:-380px;margin-left:40px;position: absolute;"/>
 			</div>
 
 			<div class="mm">
@@ -168,6 +169,9 @@
 				<div><img src="img/30.png" style="width: 50px;"/></div>
 			</div>
 		</div>
+		</div>
+		<div class="dt">
+			<img src="img/jj.jpg"/>
 		</div>
 	</body>
 </html>
