--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<img src="img/33.png"/>
 			<img src="img/32.png"/>
 		</div>
-		<div class="dt">
+		<div class="dtt">
 			<div class="dt_bj">
 				<img src="img/19.png"/>
 				<div>
